crates/atlas-runtime/tests/errors/single_ampersand.atl
// Test: Single ampersand instead of && (AT1001)
if (x & y) {
    print("wrong");
}
